[package]
name = "zoom-quilt-maker"
version = "0.1.0"
authors = ["Matthew A Hammer <pubmah@nym.hush.com>"]

[dependencies]
clap = "2.33"
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
sdl2 = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"


[[bin]]
name = "zqm"
path = "src/bin/zqm.rs"

[lib]
name = "zoom_quilt_maker"
path = "src/lib/mod.rs"
