[package]
name = "zqm-engine"
version = "0.1.0"
authors = ["Matthew A Hammer <pubmah@nym.hush.com>"]

[dependencies]
clap = "2.33"
structopt = "0.2"
log = "0.4"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"
hashcons = "0.1"
#sdl2 = "0.32"

serde-idl = { path = "/Users/matthew/dfn/sdk/src/serde_idl" }
dfx_derive = { path = "/Users/matthew/dfn/sdk/src/dfx_derive" }
dfx_info = { path = "/Users/matthew/dfn/sdk/src/dfx_info" }
ic-http-agent = { path = "/Users/matthew/dfn/sdk/src/ic_http_agent" }

[lib]
name = "zqm_engine"
path = "src/lib/mod.rs"
