[package]
name = "zqm-webshell"
version = "0.1.0"
authors = ["The ZQM Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
zqm-engine = { path = "../engine" }

[dependencies.web-sys]
version = "0.3.4"
features = [  
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
  'KeyboardEvent',
]
